--- a/1 - Stating the problem.ipynb
+++ b/1 - Stating the problem.ipynb
@@ -1,33 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Portfolio optimization\n",
-    "\n",
-    "Portfolio optimization is the problem related to financial services and banking industry that emerged with Markovitz's seminal paper in 1952. The model describes a set of assets $x_i \\in \\{X\\}_n$ from which a subset needs to be picked trying to maximize the revenue while minimizing the risk at $t$ future time steps. Each asset has associated a revenue forecast at a given time period ($e_i$) and the covariance between assets ($c_{ij}$) sets the risk amount in terms of diversification (for the sake of simplicity). The idea behind this diversification is that if we would only invest in the assets with highest revenue, the risk of them being driven by the same factors if our investment fails is bigger than if we diversify our portfolio. We will focus on a single time step process assuming local optima are part of the longer time step trajectory towards the global optima of our portfolio.\n",
-    "\n",
-    "Lets consider then, a single time step optimization for the sake of simplicity. Investment comes at a cost. A budget ($B$) is associated to the investment on a portfolio configuration and described by the summation cost of investing on each asset as $b_i$, where $i$ is the index of the particular asset. Ideally our recommendation should not surpass this condition ($\\sum b_i < B$). Hence, this classical optimization problem is often posed as \n",
-    "\n",
-    "$$\n",
-    "\\displaystyle \\max_{x_{i}\\in{\\{0,1\\}}} \\sum_{i=1}^{n} x_{i}e_i -\\;\\theta \\sum_{i,j=1}^{n}x_{i}x_{j}c_{ij}\\\\\n",
-    "\\textrm{s.t.} \\sum_{i=1}^{n}x_{i}b_{i} \\leq B, \\\\\n",
-    "$$\n",
-    "\n",
-    "where $x_{i}\\in{\\{0,1\\}}$ is the mask associated to the selection of our set of assets and $\\theta$ is a Lagrangian operator modulating the amount of risk we would like to assume. We have binarized this selection as it simplifies the calculation but of course, more comples portfolio investments can be considered tackling those three aspects on the model (revenue, risk and budget).\n",
-    "\n",
-    "We will look for the minimization of that very same model as it will fit better the technical approach we will follow. Thus the final model would look like:\n",
-    "\n",
-    "$$\n",
-    "\\displaystyle \\min_{x_{i}\\in{\\{0,1\\}}} - \\sum_{i=1}^{n} x_{i}e_i + \\;\\theta \\sum_{i,j=1}^{n}x_{i}x_{j}c_{ij}\\\\\n",
-    "\\textrm{s.t.} \\sum_{i=1}^{n}x_{i}b_{i} \\leq B, \\\\\n",
-    "$$\n",
-    "\n",
-    "Lets load our existing data and build that optimization problem."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
@@ -61,42 +34,37 @@
     "import matplotlib.pyplot as plt\n",
     "import cvxpy as cp\n",
     "import numpy \n",
-    "data = None\n",
-    "n = input(\"Enter the number of symbols to crawl: \")\n",
-    "jsonfilename = f\"{n}asset.json\"\n",
-    "with open(jsonfilename, \"r\") as jsonfile:\n",
-    "    data = json.load(jsonfile)\n",
-    "returns = data['mu']\n",
-    "covar = data['sigma']\n",
     "\n",
-    "assets = []\n",
-    "costs = []\n",
-    "for row in data['assets']:\n",
-    "    assets.append(row[\"Asset\"])\n",
-    "    costs.append(float(row[\"Open\"]))\n",
+    "def classical(mu, sigma):\n",
+    "    returns = data['mu']\n",
+    "    covar = data['sigma']\n",
     "\n",
-    "# Half the money\n",
-    "budget = np.sum(costs)/0.5\n",
-    "sns.barplot(y=returns, x = assets)\n",
-    "plt.show()\n",
-    "# Our solution variable\n",
-    "x_val = cp.Variable(len(returns), boolean=True)\n",
-    "theta = cp.Parameter(nonneg=True)\n",
-    "ret = np.array(returns)@x_val\n",
-    "risk = cp.quad_form(x_val, covar)\n",
-    "e_costs = np.array(costs)@x_val\n",
+    "    assets = []\n",
+    "    costs = []\n",
+    "    for row in data['assets']:\n",
+    "        assets.append(row[\"Asset\"])\n",
+    "        costs.append(float(row[\"Open\"]))\n",
     "\n",
-    "# Constraints\n",
-    "cons = [cp.sum(x_val) >= 0, cp.sum(e_costs) <= budget, x_val >= 0]\n",
+    "    # Half the money\n",
+    "    budget = np.sum(costs)/0.5\n",
+    "    # Our solution variable\n",
+    "    x_val = cp.Variable(len(returns), boolean=True)\n",
+    "    theta = cp.Parameter(nonneg=True)\n",
+    "    ret = np.array(returns)@x_val\n",
+    "    risk = cp.quad_form(x_val, covar)\n",
+    "    e_costs = np.array(costs)@x_val\n",
     "\n",
-    "# Objective function\n",
-    "obj = cp.Minimize(- ret + theta*risk)\n",
+    "    # Constraints\n",
+    "    cons = [cp.sum(x_val) >= 0, cp.sum(e_costs) <= budget, x_val >= 0]\n",
     "\n",
-    "# Problem\n",
-    "prob = cp.Problem(obj, cons)\n",
-    "theta.value = 0.03 # This is related to the risk penalty lagrangian\n",
-    "prob.solve(solver='ECOS_BB')\n",
-    "#the result represents the optimal value of the objective function after solving the optimization problem"
+    "    # Objective function\n",
+    "    obj = cp.Minimize(- ret + theta*risk)\n",
+    "\n",
+    "    # Problem\n",
+    "    prob = cp.Problem(obj, cons)\n",
+    "    theta.value = 0.03 # This is related to the risk penalty lagrangian\n",
+    "    prob.solve(solver='ECOS_BB')\n",
+    "    #the result represents the optimal value of the objective function after solving the optimization problem"
    ]
   },
   {
