Update csv file

--- a/compare.ipynb
+++ b/compare.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,6 +92,50 @@
     "# Print the value at column 'list selection qoao' and row 1\n",
     "list_selection_qoao_value = df.loc[0, 'list selection qoao']\n",
     "ast.literal_eval(list_selection_qoao_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.70710678  0.          0.40824829 -0.28867513 -0.5       ]\n",
+      " [-0.70710678  0.         -0.40824829  0.28867513  0.5       ]\n",
+      " [-0.          1.          0.          0.          0.        ]\n",
+      " [-0.          0.         -0.81649658 -0.28867513 -0.5       ]\n",
+      " [-0.          0.         -0.         -0.8660254   0.5       ]]\n",
+      "[[ 1.00000000e+00 -3.05311332e-16  0.00000000e+00  5.55111512e-17\n",
+      "   8.32667268e-17]\n",
+      " [-3.05311332e-16  1.00000000e+00  0.00000000e+00 -5.55111512e-17\n",
+      "  -8.32667268e-17]\n",
+      " [ 0.00000000e+00  0.00000000e+00  1.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00]\n",
+      " [ 5.55111512e-17 -5.55111512e-17  0.00000000e+00  1.00000000e+00\n",
+      "   8.32667268e-17]\n",
+      " [ 8.32667268e-17 -8.32667268e-17  0.00000000e+00  8.32667268e-17\n",
+      "   1.00000000e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.linalg import qr\n",
+    "\n",
+    "# Defining the given matrix correctly this time\n",
+    "matrix = np.array([\n",
+    "    [2, 2, 0, 0, 0],\n",
+    "    [2, 2, 2, 0, 0],\n",
+    "    [0, 2, 2, 2, 0],\n",
+    "    [0, 0, 2, 2, 2],\n",
+    "    [0, 0, 0, 2, 2]])\n",
+    "\n",
+    "q, r = qr(matrix)\n",
+    "print(q)\n",
+    "print(q @ (np.conjugate(q).T))"
    ]
   }
  ],
