Update experiment results

--- a/proposed.ipynb
+++ b/proposed.ipynb
@@ -2,19 +2,185 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "[0 0 0 1 1 1 1 1 0 0 0 1 0 0 1 1]\n",
+      "[0 1 0 1 0 1 1 0 0 1 0 0 1 1 0 1]\n",
+      "[0 1 0 0 1 1 0 1 0 1 0 0 1 1 0 1]\n",
+      "[1 1 1 0 1 0 0 1 0 0 0 0 1 1 1 0]\n",
+      "[1 1 0 1 0 1 0 1 1 0 0 0 1 0 0 1]\n",
+      "[0 0 0 1 1 1 1 0 1 1 1 0 0 0 0 1]\n",
+      "[1 1 1 1 0 0 0 0 1 0 1 0 0 0 1 1]\n",
+      "[0 1 0 1 1 0 0 0 1 1 1 0 0 1 1 0]\n",
+      "[0 1 0 0 1 0 1 0 1 0 0 1 1 1 0 1]\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/vutuanhai/Documents/GitHub/quantum_finance/model.py:34: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  return np.sqrt(result.get(0, 0) - result.get(1, 0))*x_k*mu_k, abs(np.inner(x, mu))\n",
-      "/Users/vutuanhai/Documents/GitHub/quantum_finance/model.py:34: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  return np.sqrt(result.get(0, 0) - result.get(1, 0))*x_k*mu_k, abs(np.inner(x, mu))\n",
-      "/Users/vutuanhai/Documents/GitHub/quantum_finance/model.py:34: RuntimeWarning: invalid value encountered in sqrt\n",
+      "/Users/vutuanhai/Documents/GitHub/quantum_finance/model.py:44: RuntimeWarning: invalid value encountered in sqrt\n",
       "  return np.sqrt(result.get(0, 0) - result.get(1, 0))*x_k*mu_k, abs(np.inner(x, mu))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 1 0 1 0 1 1 0 0 1 0 1 1 0 1]\n",
+      "[1 0 0 0 1 0 1 1 1 1 1 0 1 0 0 0]\n",
+      "[1 0 1 0 1 0 1 0 1 0 1 1 0 0 0 1]\n",
+      "[0 1 1 1 0 0 0 1 0 0 0 1 1 0 1 1]\n",
+      "[0 1 0 1 0 0 0 0 1 1 1 1 1 0 1 0]\n",
+      "[1 1 1 0 0 0 0 1 1 0 1 0 0 1 1 0]\n",
+      "[0 0 1 1 1 0 1 1 0 0 0 1 0 0 1 1]\n",
+      "[1 1 0 0 0 1 0 1 1 0 1 0 1 0 0 1]\n",
+      "[0 1 1 0 1 1 0 0 1 0 0 1 0 1 0 1]\n",
+      "[0 0 1 0 0 1 0 1 1 1 0 0 1 1 0 1]\n",
+      "[0 0 1 0 1 1 0 0 1 1 0 0 1 0 1 1]\n",
+      "[0 1 1 1 0 1 0 1 0 0 1 0 0 1 0 1]\n",
+      "[0 0 1 0 1 1 0 1 0 0 1 1 1 0 0 1]\n",
+      "[0 0 1 0 0 1 1 0 1 0 1 1 0 0 1 1]\n",
+      "[0 0 0 0 1 0 1 1 0 0 1 1 1 1 0 1]\n",
+      "[1 0 0 1 0 0 0 0 1 1 1 1 1 1 0 0]\n",
+      "[0 1 1 1 0 1 0 1 0 0 0 1 0 0 1 1]\n",
+      "[0 0 1 0 1 0 0 0 1 1 1 1 0 1 0 1]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vutuanhai/Documents/GitHub/quantum_finance/model.py:44: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  return np.sqrt(result.get(0, 0) - result.get(1, 0))*x_k*mu_k, abs(np.inner(x, mu))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 0 1 0 0 1 1 1 1 1 0 1 0 0 0]\n",
+      "[0 0 1 1 1 0 1 0 1 1 0 0 0 0 1 1]\n",
+      "[1 0 1 1 1 1 0 0 1 0 0 0 0 1 1 0]\n",
+      "[1 0 0 1 0 1 1 1 1 0 0 0 0 1 0 1]\n",
+      "[0 0 1 1 0 0 1 1 0 1 0 1 0 1 1 0]\n",
+      "[0 0 1 0 0 1 0 0 0 1 0 1 1 1 1 1]\n",
+      "[1 1 0 1 1 0 0 0 0 1 1 0 0 1 1 0]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vutuanhai/Documents/GitHub/quantum_finance/model.py:44: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  return np.sqrt(result.get(0, 0) - result.get(1, 0))*x_k*mu_k, abs(np.inner(x, mu))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 0 1 1 0 1 0 0 0 0 0 1 1 0 1]\n",
+      "[0 1 0 1 0 0 0 1 0 1 0 1 1 0 1 1]\n",
+      "[1 0 1 0 1 0 0 1 1 0 1 1 1 0 0 0]\n",
+      "[1 1 0 0 0 0 1 1 0 1 0 1 1 1 0 0]\n",
+      "[0 1 0 0 0 1 0 1 1 1 1 1 0 1 0 0]\n",
+      "[0 1 0 0 1 0 1 1 0 1 1 0 0 1 1 0]\n",
+      "[0 1 1 0 1 0 1 0 1 1 0 1 0 1 0 0]\n",
+      "[0 1 0 0 1 1 1 0 1 0 0 1 1 0 0 1]\n",
+      "[0 0 1 0 1 1 1 1 1 0 0 0 0 1 1 0]\n",
+      "[0 1 0 1 1 0 1 0 1 0 1 0 0 0 1 1]\n",
+      "[1 0 0 1 1 1 1 1 0 1 0 0 0 0 1 0]\n",
+      "[1 1 0 0 0 0 1 0 0 1 1 0 1 1 0 1]\n",
+      "[0 1 1 1 0 0 0 0 0 1 1 0 1 1 1 0]\n",
+      "[1 0 1 0 0 1 1 1 0 0 0 1 0 1 1 0]\n",
+      "[1 1 1 0 1 1 0 1 0 0 0 1 1 0 0 0]\n",
+      "[0 0 0 0 0 1 1 1 1 0 1 1 0 0 1 1]\n",
+      "[1 1 0 1 1 0 1 1 0 0 0 1 1 0 0 0]\n",
+      "[1 0 1 1 0 0 1 0 1 1 0 0 1 1 0 0]\n",
+      "[0 0 0 0 1 1 1 1 0 1 0 1 1 1 0 0]\n",
+      "[1 1 0 1 0 1 1 0 0 0 0 0 0 1 1 1]\n",
+      "[1 0 1 0 0 0 1 0 0 0 1 1 1 1 0 1]\n",
+      "[0 0 1 0 0 1 0 1 0 1 1 1 0 1 1 0]\n",
+      "[0 0 1 0 1 1 1 1 0 1 0 1 1 0 0 0]\n",
+      "[1 0 1 0 0 0 1 0 1 0 0 1 1 1 0 1]\n",
+      "[0 1 1 1 0 0 1 0 0 0 1 0 0 1 1 1]\n",
+      "[0 1 0 1 0 0 1 0 1 0 1 0 1 0 1 1]\n",
+      "[1 0 0 0 1 1 0 0 0 0 0 1 1 1 1 1]\n",
+      "[0 1 1 1 1 0 1 0 0 1 1 0 1 0 0 0]\n",
+      "[0 0 0 1 1 0 0 1 0 1 0 0 1 1 1 1]\n",
+      "[0 1 1 0 0 1 0 1 0 1 1 0 1 1 0 0]\n",
+      "[1 0 1 1 0 0 0 1 1 1 0 1 0 1 0 0]\n",
+      "[1 1 1 1 0 0 0 0 1 1 0 1 0 0 0 1]\n",
+      "[1 1 1 0 1 0 1 1 1 0 0 0 0 0 1 0]\n",
+      "[1 0 0 1 0 1 1 0 1 0 1 0 1 0 0 1]\n",
+      "[0 1 1 0 1 0 0 0 1 0 1 1 0 1 1 0]\n",
+      "[1 0 0 0 0 1 1 1 0 0 1 0 1 1 0 1]\n",
+      "[0 1 1 1 0 1 0 0 0 0 1 1 1 1 0 0]\n",
+      "[0 1 0 0 0 1 1 0 1 1 0 1 0 1 1 0]\n",
+      "[1 0 1 0 0 1 1 0 0 1 0 1 1 1 0 0]\n",
+      "[0 0 1 0 0 0 0 0 1 1 1 0 1 1 1 1]\n",
+      "[0 0 1 0 1 1 0 0 1 1 0 0 1 0 1 1]\n",
+      "[1 0 0 1 0 0 0 1 0 1 0 1 1 1 0 1]\n",
+      "[1 0 0 0 0 1 1 0 1 0 0 0 1 1 1 1]\n",
+      "[1 0 1 0 0 0 0 0 1 1 1 0 1 1 0 1]\n",
+      "[1 1 1 0 1 0 1 0 1 0 0 0 0 1 1 0]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vutuanhai/Documents/GitHub/quantum_finance/model.py:44: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  return np.sqrt(result.get(0, 0) - result.get(1, 0))*x_k*mu_k, abs(np.inner(x, mu))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 1 1 0 0 1 0 1 0 0 1 0 1 1 1]\n",
+      "[0 1 1 1 0 1 1 0 1 0 1 0 1 0 0 0]\n",
+      "[1 1 0 0 0 0 0 0 1 0 0 1 1 1 1 1]\n",
+      "[0 0 1 1 0 1 1 1 1 0 1 0 0 1 0 0]\n",
+      "[1 1 1 0 1 1 1 0 0 0 0 0 1 1 0 0]\n",
+      "[0 1 1 0 1 0 0 1 1 1 0 0 1 1 0 0]\n",
+      "[1 0 1 0 0 1 1 1 0 0 0 0 0 1 1 1]\n",
+      "[0 1 1 0 1 1 0 0 1 0 0 0 1 1 1 0]\n",
+      "[0 1 1 0 1 1 1 1 0 0 1 0 1 0 0 0]\n",
+      "[0 1 0 1 0 0 1 1 1 0 1 1 0 1 0 0]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vutuanhai/Documents/GitHub/quantum_finance/model.py:44: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  return np.sqrt(result.get(0, 0) - result.get(1, 0))*x_k*mu_k, abs(np.inner(x, mu))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0 0 0 1 1 0 1 0 0 1 0 1 1 0 1]\n",
+      "[1 1 0 1 1 0 0 0 1 0 0 1 1 0 1 0]\n",
+      "[1 0 1 0 0 0 1 0 1 0 1 0 0 1 1 1]\n",
+      "[0 1 0 0 1 0 1 0 0 1 0 1 0 1 1 1]\n",
+      "[1 1 1 1 1 0 1 0 0 1 0 1 0 0 0 0]\n",
+      "[1 1 1 0 0 0 1 0 0 1 1 1 0 0 1 0]\n",
+      "[0 1 1 0 0 0 0 1 1 0 1 1 1 0 0 1]\n",
+      "[0 1 0 1 0 1 1 1 0 1 0 0 1 0 0 1]\n",
+      "[0 0 1 1 1 0 0 0 1 1 1 1 0 0 0 1]\n",
+      "[1 1 0 0 1 0 0 1 1 0 1 1 0 0 1 0]\n",
+      "[0 0 1 0 0 0 1 1 1 1 1 0 0 1 0 1]\n"
      ]
     }
    ],
@@ -25,29 +191,39 @@
     "%autoreload 2\n",
     "import data, po, model, ast, csv\n",
     "\n",
-    "num_assets = 2\n",
+    "for num_assets in range(16,17):\n",
     "\n",
-    "file_name = f'./result_{num_assets}.csv'\n",
-    "result = pd.read_csv(file_name)\n",
-    "for i in range(0, len(result)):\n",
-    "    asset_list = (result['assets'][i])\n",
-    "    array_string = asset_list.replace(\"[\", \"\").replace(\"]\", \"\").replace(\"'\", \"\")\n",
-    "    asset_list = array_string.split()\n",
-    "    mu, sigma, _ = data.get_mu_sigma_specific('asset.csv', asset_list)\n",
-    "    numpy_result, qpo_result = (model.qpo(mu, sigma))\n",
-    "    \n",
-    "    file_name = f\"compare_{num_assets}.csv\"\n",
-    "    df = pd.read_csv(file_name)\n",
-    "    asset = df.assets.unique()\n",
-    "    row = [[str(asset_list),numpy_result, qpo_result]]\n",
+    "    file_name = f'./result_{num_assets}.csv'\n",
+    "    result = pd.read_csv(file_name)\n",
+    "    for i in range(0, len(result)):\n",
+    "        asset_list = (result['assets'][i])\n",
+    "        array_string = asset_list.replace(\"[\", \"\").replace(\"]\", \"\").replace(\"'\", \"\")\n",
+    "        asset_list = array_string.split()\n",
+    "        mu, sigma, _ = data.get_mu_sigma_specific('asset.csv', asset_list)\n",
+    "        numpy_result, qpo_result = (model.qpo(mu, sigma))\n",
     "        \n",
-    "    if row[0][0] not in asset:\n",
-    "        with open(file_name, 'a') as csvfile:\n",
-    "            # Create a csv writer object\n",
-    "            # Check the value of first cell in row, if it is existing, then skip writing it\n",
+    "        file_name = f\"compare_{num_assets}.csv\"\n",
+    "        # check if file exists\n",
+    "        try:\n",
+    "            with open(file_name, 'r') as csvfile:\n",
+    "                pass\n",
+    "        except FileNotFoundError:\n",
+    "            with open(file_name, 'w') as csvfile:\n",
+    "                # Create a csv writer object\n",
+    "                csvwriter = csv.writer(csvfile)\n",
+    "                # Write the row to csv file\n",
+    "                csvwriter.writerow(['assets', 'numpy', 'qpo'])\n",
+    "        df = pd.read_csv(file_name)\n",
+    "        asset = df.assets.unique()\n",
+    "        row = [[str(asset_list),numpy_result, qpo_result]]\n",
     "            \n",
-    "            csvwriter = csv.writer(csvfile)\n",
-    "            csvwriter.writerows(row)"
+    "        if row[0][0] not in asset:\n",
+    "            with open(file_name, 'a') as csvfile:\n",
+    "                # Create a csv writer object\n",
+    "                # Check the value of first cell in row, if it is existing, then skip writing it\n",
+    "                \n",
+    "                csvwriter = csv.writer(csvfile)\n",
+    "                csvwriter.writerows(row)"
    ]
   },
   {
