--- a/compare.ipynb
+++ b/compare.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,18 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_assets = 5\n",
+    "num_assets = 3\n",
     "for i in range(100):    \n",
     "\n",
     "    mu, sigma, asset_list = data.get_mu_sigma('asset.csv', num_assets)\n",
     "    qp = po.to_po(mu, sigma, num_assets = num_assets, q = 0.5)\n",
     "    resultNumpy = model.numpy(qp)\n",
     "    resultQOAO = model.qoao(qp)\n",
-    "    resultVQE = model.vqe(qp, Wchain_zxz(num_assets, int(num_assets/2)))\n",
+    "    resultVQE = model.vqe(qp, Wchain_zxz(num_assets, int(np.ceil(num_assets/2))))\n",
     "\n",
     "    fields = ['assets', 'list selection numpy', 'list selection qoao', 'list selection vqe', 'numpy value', 'qoao value', 'vqe value']\n",
     "    row = [[str(asset_list), str(resultNumpy.x.astype(int).tolist()), str(list(resultQOAO.x.astype(int).tolist())), str(list(resultVQE.x.astype(int).tolist())), resultNumpy.fval, resultQOAO.fval, resultVQE.fval]]\n",
@@ -43,28 +43,6 @@
     "            \n",
     "            csvwriter = csv.writer(csvfile)\n",
     "            csvwriter.writerows(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "I/O operation on closed file.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[39], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(filename, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m csvfile:\n\u001b[0;32m----> 2\u001b[0m     \u001b[43mcsvwriter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwriterows\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrows\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mValueError\u001b[0m: I/O operation on closed file."
-     ]
-    }
-   ],
-   "source": [
-    "with open(filename, 'a') as csvfile:\n",
-    "    csvwriter.writerows(rows)"
    ]
   },
   {
