--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -2,31 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['BTCUSDT' 'ETHUSDT' 'SOLUSDT' 'XRPUSDT' '1INCHUSDT' 'ALCXUSDT' 'ALGOUSDT'\n",
-      " 'ALICEUSDT' 'ALPACAUSDT' 'ALPHAUSDT' 'AAVEUSDT' 'ACAUSDT' 'ACMUSDT'\n",
-      " 'ALPINEUSDT' 'ACHUSDT' 'ADADOWNUSDT' 'ADAUPUSDT' 'ADAUSDT' 'ADXUSDT'\n",
-      " 'BUSDUSDT' 'CFXUSDT' 'AGIXUSDT' 'AGLDUSDT' 'C98USDT' 'CAKEUSDT'\n",
-      " 'AKROUSDT' 'CELOUSDT' 'AMBUSDT' 'AMPUSDT' 'CELRUSDT' 'ANKRUSDT' 'ANTUSDT'\n",
-      " 'CHESSUSDT' 'APEUSDT' 'API3USDT' 'APTUSDT' 'ARBUSDT' 'ARDRUSDT' 'CHRUSDT'\n",
-      " 'CHZUSDT' 'BURGERUSDT' 'ARPAUSDT' 'ARUSDT' 'ASRUSDT' 'ASTRUSDT'\n",
-      " 'CITYUSDT' 'ATAUSDT' 'ATMUSDT' 'ATOMUSDT' 'AUCTIONUSDT' 'AUDIOUSDT'\n",
-      " 'CKBUSDT' 'CLVUSDT' 'AVAUSDT' 'AVAXUSDT' 'AXSUSDT' 'BADGERUSDT'\n",
-      " 'BAKEUSDT' 'BALUSDT' 'BANDUSDT' 'BARUSDT' 'BATUSDT' 'CTKUSDT' 'CTSIUSDT'\n",
-      " 'COMPUSDT' 'COSUSDT' 'COTIUSDT' 'CTXCUSDT' 'DATAUSDT' 'CVPUSDT' 'AVABUSD'\n",
-      " 'CRVUSDT' 'CVXUSDT' 'BELUSDT' 'BETAUSDT' 'BICOUSDT' 'BIFIUSDT' 'DCRUSDT'\n",
-      " 'DEGOUSDT' 'BLZUSDT' 'DARUSDT' 'DASHUSDT' 'BNBDOWNUSDT' 'BNBUPUSDT'\n",
-      " 'BNBUSDT' 'BNXUSDT' 'BONDUSDT' 'DENTUSDT' 'BSWUSDT' 'DFUSDT' 'DGBUSDT'\n",
-      " 'BTCUPUSDT' 'DIAUSDT' 'BTSUSDT' 'BTTCUSDT' 'DODOUSDT' 'DOCKUSDT']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -40,7 +18,7 @@
     "# get random 4 assets_list in asset_list\n",
     "np.random.seed(0)\n",
     "np.random.shuffle(asset_list)\n",
-    "asset_list = asset_list[:4]\n",
+    "asset_list = asset_list\n",
     "\n",
     "exp_ret = {}\n",
     "return_list = []\n",
@@ -57,6 +35,26 @@
     "return_list = np.array(return_list)\n",
     "mu = [i for i in exp_ret.values()]   \n",
     "sigma = np.cov((return_list))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "97"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(asset_list.shape[0])"
    ]
   },
   {
